[gd_scene load_steps=43 format=3 uid="uid://ceo0raxqkvfm3"]

[ext_resource type="Script" uid="uid://b8ajunmh5dmnh" path="res://player/player.gd" id="1_oul6g"]
[ext_resource type="PackedScene" uid="uid://c4arhh6me17h0" path="res://assets/player/basic/mannequiny-0.3.0.glb" id="2_8t03j"]
[ext_resource type="Script" uid="uid://b1kscclh4m30y" path="res://inventory/components/inventory_component.gd" id="2_rkbax"]
[ext_resource type="Script" uid="uid://blsnp5ey8ycyw" path="res://ability_system/components/ability_system_component.gd" id="3_g1dw6"]
[ext_resource type="Script" uid="uid://gaby05cg34yr" path="res://ability_system/abilities/ability_resources/ability_base.gd" id="4_qjkh3"]
[ext_resource type="Script" uid="uid://bux82135ahkg" path="res://ability_system/abilities/ability_resources/weapon_abilities/sword_abilities/sword_ability.gd" id="5_qjkh3"]
[ext_resource type="Script" uid="uid://b0ye4es03q15" path="res://ability_system/attributes/attribute_resources/attribute_base.gd" id="6_boad6"]
[ext_resource type="Script" uid="uid://dhqmbc5bt6kgy" path="res://ability_system/abilities/ability_resources/aerial_abilities/jump_abilities/jump_ability.gd" id="6_rgyib"]
[ext_resource type="Script" uid="uid://cod43lcnvd1va" path="res://ability_system/abilities/ability_resources/dodge_abilities/dodge_abilities/basic_dodge_ability.gd" id="7_hg6s5"]
[ext_resource type="Script" uid="uid://dgqsd2n838pwa" path="res://ability_system/attributes/attribute_resources/vital/vital_attribute.gd" id="7_rgyib"]
[ext_resource type="Curve" uid="uid://d37ut8uh5cqra" path="res://assets/player/basic/animation/xfade_curve_basic.tres" id="11_ebec5"]
[ext_resource type="Script" uid="uid://bfokn7sn6fi0b" path="res://player/player_input.gd" id="12_ebec5"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_kqu6x"]

[sub_resource type="Resource" id="Resource_g6k8r"]
script = ExtResource("5_qjkh3")
uses_ammo = false
cost = 0.0
cooldown = 0.0
action_speed = 1.0
input_action = 2
min_damage = 0.0
max_damage = 0.0
metadata/_custom_type_script = "uid://bux82135ahkg"

[sub_resource type="Resource" id="Resource_8t03j"]
script = ExtResource("6_rgyib")
jump_velocity = 50.0
does_use_gravity = true
cost = 0.0
cooldown = 0.0
action_speed = 0.25
input_action = 7
min_damage = 0.0
max_damage = 0.0
metadata/_custom_type_script = "uid://dhqmbc5bt6kgy"

[sub_resource type="Resource" id="Resource_2ieo8"]
script = ExtResource("7_hg6s5")
dodge_impulse = 100.0
invuln_time = 0.0
cost = 0.0
cooldown = 0.0
action_speed = 1.0
input_action = 6
min_damage = 0.0
max_damage = 0.0
metadata/_custom_type_script = "uid://cod43lcnvd1va"

[sub_resource type="Resource" id="Resource_hg6s5"]
script = ExtResource("7_rgyib")
attribute_type = 0
attribute = &""
value = 0.0
max_value = 0.0
metadata/_custom_type_script = "uid://dgqsd2n838pwa"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_32hag"]
animation = &"dash"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_2ieo8"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ebec5"]
animation = &"run"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_yllr7"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_wodsf"]
xfade_time = 0.1
xfade_curve = ExtResource("11_ebec5")
advance_mode = 2
advance_condition = &"move"

[sub_resource type="Curve" id="Curve_2ieo8"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.777778, 0.727991), 0.836859, 0.836859, 0, 0, Vector2(0.925926, 0.869128), 0.594211, 0.0, 0, 0]
point_count = 3

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_32hag"]
xfade_time = 0.4
xfade_curve = SubResource("Curve_2ieo8")
advance_mode = 2
advance_condition = &"idle"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_e7oew"]
states/idle/node = SubResource("AnimationNodeAnimation_2ieo8")
states/idle/position = Vector2(461.333, 73.3333)
states/run/node = SubResource("AnimationNodeAnimation_ebec5")
states/run/position = Vector2(575.333, 184)
transitions = ["Start", "idle", SubResource("AnimationNodeStateMachineTransition_yllr7"), "idle", "run", SubResource("AnimationNodeStateMachineTransition_wodsf"), "run", "idle", SubResource("AnimationNodeStateMachineTransition_32hag")]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_yllr7"]
animation = &"air_jump"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_kb6p2"]
animation = &"air_jump_anticipation"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_wodsf"]
animation = &"air_land"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_tqiix"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_e7oew"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_c35mf"]
advance_mode = 2
advance_condition = &"land"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_65viv"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_65viv"]
states/End/position = Vector2(1225.33, 117.333)
states/air_jump/node = SubResource("AnimationNodeAnimation_yllr7")
states/air_jump/position = Vector2(632.667, 100.444)
states/air_jump_anticipation/node = SubResource("AnimationNodeAnimation_kb6p2")
states/air_jump_anticipation/position = Vector2(411.333, 99.7778)
states/air_land/node = SubResource("AnimationNodeAnimation_wodsf")
states/air_land/position = Vector2(828.667, 101.185)
transitions = ["Start", "air_jump_anticipation", SubResource("AnimationNodeStateMachineTransition_tqiix"), "air_jump_anticipation", "air_jump", SubResource("AnimationNodeStateMachineTransition_e7oew"), "air_jump", "air_land", SubResource("AnimationNodeStateMachineTransition_c35mf"), "air_land", "End", SubResource("AnimationNodeStateMachineTransition_65viv")]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_2ieo8"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ebec5"]
advance_mode = 2
advance_condition = &"jump"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_kb6p2"]
advance_mode = 2
advance_condition = &"landed"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_x7c3f"]
advance_mode = 2
advance_condition = &"dodge"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_bjvpn"]
advance_mode = 2
advance_condition = &"dodge"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_s7qer"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_g4c7l"]
advance_mode = 2
advance_condition = &"dodge_finish"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_yllr7"]
states/Dash/node = SubResource("AnimationNodeAnimation_32hag")
states/Dash/position = Vector2(304.667, 206)
states/IdleWalkRun/node = SubResource("AnimationNodeStateMachine_e7oew")
states/IdleWalkRun/position = Vector2(473.333, 57.3333)
states/Jump/node = SubResource("AnimationNodeStateMachine_65viv")
states/Jump/position = Vector2(495.333, 175.333)
transitions = ["Start", "IdleWalkRun", SubResource("AnimationNodeStateMachineTransition_2ieo8"), "IdleWalkRun", "Jump", SubResource("AnimationNodeStateMachineTransition_ebec5"), "Jump", "IdleWalkRun", SubResource("AnimationNodeStateMachineTransition_kb6p2"), "IdleWalkRun", "Dash", SubResource("AnimationNodeStateMachineTransition_x7c3f"), "Jump", "Dash", SubResource("AnimationNodeStateMachineTransition_bjvpn"), "Dash", "Jump", SubResource("AnimationNodeStateMachineTransition_s7qer"), "Dash", "IdleWalkRun", SubResource("AnimationNodeStateMachineTransition_g4c7l")]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_yllr7"]

[node name="Player" type="CharacterBody3D"]
safe_margin = 0.01
script = ExtResource("1_oul6g")
PLAYER_TURN_SPEED = 10000.0
CLAMP_HEAD_ROTATION = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_kqu6x")

[node name="mannequiny" parent="." instance=ExtResource("2_8t03j")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, -0.969354, 0.30193)

[node name="Skeleton3D" parent="mannequiny" index="0"]
bones/1/position = Vector3(-0.00730736, 0.966455, 0.254128)
bones/1/rotation = Quaternion(0.130706, 0.14469, -0.0101098, 0.980754)
bones/2/rotation = Quaternion(0.752595, 0.0998652, 0.650629, 0.0176144)
bones/2/scale = Vector3(0.999998, 1.02772, 1)
bones/3/position = Vector3(8.52556e-07, 0.389355, -9.82567e-07)
bones/3/rotation = Quaternion(-3.89395e-05, 5.43673e-05, 0.00256851, 0.999997)
bones/3/scale = Vector3(0.999999, 1, 1)
bones/4/rotation = Quaternion(0.281445, 0.531661, -0.312246, 0.735274)
bones/4/scale = Vector3(0.999291, 0.989174, 0.985791)
bones/5/position = Vector3(0.00172384, 0.12762, -0.00308564)
bones/5/rotation = Quaternion(0.105672, 0.9429, 0.314781, -0.0262085)
bones/5/scale = Vector3(1.00017, 0.987338, 1.01233)
bones/6/rotation = Quaternion(0.994052, -0.0385937, -0.0136068, 0.100923)
bones/6/scale = Vector3(0.999997, 1.00976, 0.999999)
bones/7/position = Vector3(1.54008e-06, 0.389355, 3.15617e-07)
bones/7/rotation = Quaternion(3.23881e-06, 2.1178e-05, 0.00260434, -0.999997)
bones/7/scale = Vector3(1, 1, 1)
bones/8/rotation = Quaternion(0.126509, -0.842512, 0.367609, 0.372871)
bones/8/scale = Vector3(0.999924, 0.995339, 0.995082)
bones/9/position = Vector3(-0.00104618, 0.12766, -0.00104701)
bones/9/rotation = Quaternion(-0.0597272, 0.946183, 0.317944, 0.00902063)
bones/9/scale = Vector3(1.00002, 0.995323, 1.00465)
bones/10/rotation = Quaternion(-0.121236, -0.147591, 0.0121751, 0.981514)
bones/11/rotation = Quaternion(-0.0864697, 0.00328905, 0.000285475, 0.996249)
bones/12/rotation = Quaternion(0.313699, 0.00638646, 0.0021101, 0.949499)
bones/13/rotation = Quaternion(-0.153119, -0.00667919, -0.00102724, 0.988185)
bones/14/position = Vector3(-0.0436113, 0.180816, 0.0252583)
bones/14/rotation = Quaternion(-0.46389, 0.612435, -0.50459, -0.393851)
bones/15/rotation = Quaternion(0.436106, 0.518729, 0.373398, 0.633487)
bones/16/rotation = Quaternion(0.315258, 0.136653, 0.209334, 0.915488)
bones/16/scale = Vector3(1, 0.999753, 1)
bones/17/rotation = Quaternion(0.0526832, 0.28301, -0.0317517, 0.957142)
bones/17/scale = Vector3(0.999999, 1.00024, 1)
bones/18/position = Vector3(-0.0491646, 0.0500859, -0.00461843)
bones/18/rotation = Quaternion(0.0464702, -0.786923, 0.317009, 0.52735)
bones/18/scale = Vector3(1.00001, 0.999984, 1)
bones/19/position = Vector3(2.88663e-07, 0.0210911, 8.98888e-07)
bones/19/rotation = Quaternion(-0.0242228, -0.306659, 0.0625978, 0.94945)
bones/19/scale = Vector3(0.99999, 0.999995, 1.00001)
bones/20/rotation = Quaternion(-0.00920785, 0.438728, 0.00859625, 0.898531)
bones/20/scale = Vector3(1.00001, 1, 0.99999)
bones/21/position = Vector3(0.0245621, 0.0860409, -0.00147576)
bones/21/rotation = Quaternion(-0.713069, 0.12361, -0.0287142, 0.689514)
bones/21/scale = Vector3(1, 1, 0.999995)
bones/22/rotation = Quaternion(-0.585567, -0.020847, 0.00952783, 0.8103)
bones/22/scale = Vector3(1, 1.00002, 0.999983)
bones/23/rotation = Quaternion(-0.587469, -0.00381376, -0.00984869, 0.809178)
bones/23/scale = Vector3(0.999999, 0.999987, 1.00001)
bones/24/position = Vector3(-0.00260177, 0.0868646, 0.00038214)
bones/24/rotation = Quaternion(-0.450182, 0.161463, -0.0363564, 0.877464)
bones/24/scale = Vector3(1, 0.999975, 1.00002)
bones/25/rotation = Quaternion(-0.64571, -0.00769499, -0.0194433, 0.763297)
bones/25/scale = Vector3(0.999998, 1, 0.999997)
bones/26/rotation = Quaternion(-0.639766, -0.0177411, -0.0200564, 0.768103)
bones/26/scale = Vector3(0.999999, 0.999999, 1)
bones/27/position = Vector3(-0.0322425, 0.0834219, -0.00188275)
bones/27/rotation = Quaternion(-0.425603, 0.144516, -0.0385396, 0.892464)
bones/27/scale = Vector3(1, 0.999974, 1.00002)
bones/28/rotation = Quaternion(-0.583527, 0.00193091, -0.0536865, 0.810315)
bones/28/scale = Vector3(1, 1.00001, 0.999995)
bones/29/rotation = Quaternion(-0.59928, 0.00781382, -0.029632, 0.799953)
bones/29/scale = Vector3(0.999998, 1, 0.999995)
bones/30/position = Vector3(0.0435933, 0.180816, 0.0252588)
bones/30/rotation = Quaternion(0.462753, 0.613387, -0.503271, 0.395392)
bones/31/rotation = Quaternion(-0.436108, 0.518788, 0.373292, -0.633499)
bones/32/rotation = Quaternion(0.315335, -0.13675, -0.209277, 0.91546)
bones/32/scale = Vector3(1, 0.999931, 1)
bones/33/position = Vector3(-7.15925e-07, 0.207321, 2.43388e-06)
bones/33/rotation = Quaternion(0.0527239, -0.282838, 0.0321089, 0.957179)
bones/33/scale = Vector3(0.999999, 1.00007, 1)
bones/34/position = Vector3(0.0491431, 0.0500877, -0.00465477)
bones/34/rotation = Quaternion(0.046703, 0.787035, -0.316929, 0.52721)
bones/34/scale = Vector3(1, 0.999996, 1)
bones/35/rotation = Quaternion(-0.0241585, 0.306849, -0.0624171, 0.949402)
bones/35/scale = Vector3(0.999996, 0.999998, 1)
bones/36/rotation = Quaternion(-0.00919865, -0.43853, -0.0083645, 0.89863)
bones/36/scale = Vector3(1, 0.999999, 0.999997)
bones/37/position = Vector3(-0.0246053, 0.0860427, -0.0015069)
bones/37/rotation = Quaternion(-0.713035, -0.123602, 0.0292086, 0.68953)
bones/37/scale = Vector3(1, 1, 0.999998)
bones/38/rotation = Quaternion(-0.585551, 0.0207869, -0.00922037, 0.810316)
bones/38/scale = Vector3(1, 1, 0.999995)
bones/39/rotation = Quaternion(-0.587466, 0.00385781, 0.0101542, 0.809176)
bones/39/scale = Vector3(1, 0.999996, 1)
bones/40/position = Vector3(0.00255961, 0.0868697, 0.000348689)
bones/40/rotation = Quaternion(-0.450104, -0.161248, 0.0368453, 0.877524)
bones/40/scale = Vector3(1, 0.999993, 1.00001)
bones/41/rotation = Quaternion(-0.645696, 0.00768163, 0.0197525, 0.763301)
bones/41/scale = Vector3(1, 1, 0.999998)
bones/42/rotation = Quaternion(-0.639762, 0.0177705, 0.0203457, 0.768098)
bones/42/scale = Vector3(1, 1, 1)
bones/43/position = Vector3(0.0322043, 0.0834298, -0.00191835)
bones/43/rotation = Quaternion(-0.425481, -0.144288, 0.0390203, 0.892538)
bones/43/scale = Vector3(1, 0.999993, 1.00001)
bones/44/rotation = Quaternion(-0.583503, -0.00190842, 0.0540069, 0.810311)
bones/44/scale = Vector3(1, 1, 0.999998)
bones/45/rotation = Quaternion(-0.599265, -0.00776477, 0.0298958, 0.799954)
bones/45/scale = Vector3(0.999999, 1, 0.999998)

[node name="CameraBase" type="Node3D" parent="."]

[node name="CameraRot" type="Node3D" parent="CameraBase"]

[node name="SpringArm3D" type="SpringArm3D" parent="CameraBase/CameraRot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 0)
spring_length = 10.0
margin = 0.1

[node name="Camera3D" type="Camera3D" parent="CameraBase/CameraRot/SpringArm3D"]

[node name="ItemTrace" type="RayCast3D" parent="CameraBase/CameraRot/SpringArm3D/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00611687, 0.00854588, 0.00039053)
target_position = Vector3(0, 0, -100)
collision_mask = 512
debug_shape_custom_color = Color(0.726872, 3.19588e-05, 0.53824, 1)
debug_shape_thickness = 5

[node name="InventoryComponent" type="Node" parent="."]
script = ExtResource("2_rkbax")
metadata/_custom_type_script = "uid://b1kscclh4m30y"

[node name="AbilitySystemComponent" type="Node" parent="."]
script = ExtResource("3_g1dw6")
startup_abilities = Array[ExtResource("4_qjkh3")]([SubResource("Resource_g6k8r"), SubResource("Resource_8t03j"), SubResource("Resource_2ieo8")])
attributes = Array[ExtResource("6_boad6")]([SubResource("Resource_hg6s5")])
metadata/_custom_type_script = "uid://blsnp5ey8ycyw"

[node name="AnimationTree" type="AnimationTree" parent="."]
root_node = NodePath("../mannequiny")
root_motion_track = NodePath("Skeleton3D:root")
root_motion_local = false
callback_mode_process = 0
tree_root = SubResource("AnimationNodeStateMachine_yllr7")
anim_player = NodePath("../mannequiny/AnimationPlayer")
parameters/conditions/dodge = false
parameters/conditions/dodge_finish = false
parameters/conditions/jump = false
parameters/conditions/landed = false
parameters/IdleWalkRun/conditions/idle = false
parameters/IdleWalkRun/conditions/move = false
parameters/Jump/conditions/land = false

[node name="InputSynchronizer" type="MultiplayerSynchronizer" parent="." node_paths=PackedStringArray("camera_base", "camera_rot", "camera_camera")]
replication_config = SubResource("SceneReplicationConfig_yllr7")
script = ExtResource("12_ebec5")
camera_base = NodePath("../CameraBase")
camera_rot = NodePath("../CameraBase/CameraRot")
camera_camera = NodePath("../CameraBase/CameraRot/SpringArm3D/Camera3D")

[editable path="mannequiny"]
